--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -6,3 +6,14 @@ a {
     color: inherit;
   }
 }
+
+.text-title {
+  font-size: 30px;
+}
+.text-subtitle {
+  font-size: 20px;
+}
+
+.card-border-radius {
+  border-radius: 12px;
+}
