--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -21,3 +21,10 @@ a {
 .shadow-custom-1 {
   box-shadow: 0 10px 12px #00000029;
 }
+
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .5s;
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+  opacity: 0;
+}
