--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -28,3 +28,6 @@ a {
 .fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
   opacity: 0;
 }
+.rounded-full {
+  border-radius: 100%;
+}
